@startuml
'https://plantuml.com/class-diagram


class TodoListApplication {
start(Stage primaryStage) throws Exception
main(String[] args)
}

TodoListApplication <|-- ButtonsControl

class ButtonsControl {
FileChooser fileChooser
ObservableList<TaskListItems> taskListItems
List<List<String>> printingList
TextField taskDescription
DatePicker taskDueDate;
ComboBox taskFilter;
TableView<TaskListItems> taskLists
TextField taskName;
TableColumn<TaskListItems, String> descriptionColumn
TableColumn<TaskListItems, Date> dueDateColumn
TableColumn<TaskListItems, String> statusColumn;
TableColumn<TaskListItems, String> taskColumn
initialize()
deleteTask()
editDueDate()
editTaskDescript()
editTaskName()
listFilter(ActionEvent event)
getFile(MouseEvent event)
saveFile(MouseEvent event) throws IOException
exportFile(File file)
clearText()
clearTable()
}

ButtonsControl <|-- TaskListItems

class TaskListItems{
String taskName
String taskDescription
LocalDate dueDate
CheckBox status
boolean complete
String getTaskName()
setTaskName(String taskName)
String getTaskDescription()
setTaskDescription(String taskDescription)
LocalDate getDueDate()
setDueDate(LocalDate dueDate)
CheckBox getStatus()
setStatus(CheckBox status)
boolean isComplete()
setComplete(boolean complete)
}

Class ButtonControlTest{
addTest()
testExport()
testImport()
}

@enduml